rustdocs/errors/rust-bitcoin-hashes-tests-api.rs.txt
error[E0432]: unresolved import `bitcoin_hashes`
  --> ../rust-bitcoin/hashes/tests/api.rs:15:5
   |
15 | use bitcoin_hashes::{
   |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_hashes`
   |
help: you might be missing a crate named `bitcoin_hashes`, add it to your project and import it in your code
   |
15 + extern crate bitcoin_hashes;
   |

error[E0432]: unresolved import `bitcoin_hashes`
  --> ../rust-bitcoin/hashes/tests/api.rs:20:5
   |
20 | use bitcoin_hashes::{
   |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_hashes`
   |
help: you might be missing a crate named `bitcoin_hashes`, add it to your project and import it in your code
   |
15 + extern crate bitcoin_hashes;
   |

error[E0425]: cannot find type `TaggedHash` in this scope
  --> ../rust-bitcoin/hashes/tests/api.rs:54:8
   |
54 |     h: TaggedHash,
   |        ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `Tag` in this scope
  --> ../rust-bitcoin/hashes/tests/api.rs:98:28
   |
98 |     g: sha256t::HashEngine<Tag>,
   |                            ^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
90 | struct Engines<Tag> {
   |               +++++

error[E0425]: cannot find type `Tag` in this scope
   --> ../rust-bitcoin/hashes/tests/api.rs:151:28
    |
151 |     f: sha256t::HashEngine<Tag>,
    |                            ^^^ not found in this scope
    |
help: you might be missing a type parameter
    |
145 | struct Default<Tag> {
    |               +++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
